fixed year dropdown menu overflow

--- a/profiles/static/style.css
+++ b/profiles/static/style.css
@@ -53,6 +53,11 @@
 	background-size: cover;
 }
 
+.dropdown-menu {
+	max-height: 20em;
+	overflow-y: auto;
+}
+
 .badge {
 	font-size: 85%;
 }
